# gpu_collatz

./: .gitignore  Cargo.toml
ash-collatz/: Cargo.toml
src/: a.spv  main.rs  shader.comp
wgpu-collatz/: Cargo.toml
wgpu-collatz/src/: main.rs
