[package]
name = "ash"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31.0"
futures = "0.3.7"
bytemuck = "1.4.1"
log = "0.4.11"
env_logger = "0.8.1"
